--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@sveltejs/kit": "^1.5.0",
         "@typescript-eslint/eslint-plugin": "^5.45.0",
         "@typescript-eslint/parser": "^5.45.0",
+        "@unocss/extractor-svelte": "^0.51.12",
         "eslint": "^8.28.0",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-svelte": "^2.26.0",
@@ -27,11 +28,13 @@
         "svelte-check": "^3.0.1",
         "tslib": "^2.4.1",
         "typescript": "^5.0.0",
+        "unocss": "^0.51.12",
         "vite": "^4.3.0"
     },
     "type": "module",
     "dependencies": {
         "@libsql/client": "^0.1.4",
+        "@unocss/reset": "^0.51.12",
         "@vercel/kv": "^0.1.1",
         "drizzle-kit": "^0.17.6",
         "drizzle-orm": "^0.25.4"
