Add better types and validation

--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "@unocss/extractor-svelte": "^0.51.12",
         "eslint": "^8.40.0",
         "eslint-config-prettier": "^8.8.0",
-        "eslint-plugin-svelte": "^2.27.3",
+        "eslint-plugin-svelte": "^2.27.4",
         "prettier": "^2.8.8",
         "prettier-plugin-svelte": "^2.10.0",
         "svelte": "^3.59.0",
@@ -39,6 +39,7 @@
         "chart.js": "^4.3.0",
         "drizzle-kit": "^0.17.6",
         "drizzle-orm": "^0.25.4",
-        "svelte-chartjs": "^3.1.2"
+        "svelte-chartjs": "^3.1.2",
+        "zod": "^3.21.4"
     }
 }
