--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
         "@sveltejs/adapter-auto": "^2.0.1",
         "@sveltejs/adapter-vercel": "^2.4.3",
         "@sveltejs/kit": "^1.16.2",
+        "@types/chart.js": "^2.9.37",
         "@typescript-eslint/eslint-plugin": "^5.59.2",
         "@typescript-eslint/parser": "^5.59.2",
         "@unocss/extractor-svelte": "^0.51.12",
+        "chart.js": "^4.3.0",
         "eslint": "^8.40.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-svelte": "^2.27.4",
+        "lucide-svelte": "^0.214.0",
         "prettier": "^2.8.8",
         "prettier-plugin-svelte": "^2.10.0",
         "svelte": "^3.59.0",
@@ -33,13 +36,12 @@
     },
     "type": "module",
     "dependencies": {
+        "@krowten/svelte-heroicons": "^0.1.0",
         "@libsql/client": "^0.1.4",
         "@unocss/reset": "^0.51.12",
         "@vercel/kv": "^0.1.2",
-        "chart.js": "^4.3.0",
         "drizzle-kit": "^0.17.6",
         "drizzle-orm": "^0.25.4",
-        "svelte-chartjs": "^3.1.2",
         "zod": "^3.21.4"
     }
 }
