--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
         "@libsql/client": "^0.1.4",
         "@unocss/reset": "^0.51.12",
         "@vercel/kv": "^0.1.2",
+        "chartjs-plugin-datalabels": "^2.2.0",
         "drizzle-kit": "^0.17.6",
         "drizzle-orm": "^0.25.4",
         "zod": "^3.21.4"
