--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "eslint": "^8.40.0",
         "eslint-config-prettier": "^8.8.0",
         "eslint-plugin-svelte": "^2.28.0",
-        "lucide-svelte": "^0.214.0",
         "prettier": "^2.8.8",
         "prettier-plugin-svelte": "^2.10.0",
         "svelte": "^3.59.1",
@@ -37,12 +36,17 @@
     "type": "module",
     "dependencies": {
         "@krowten/svelte-heroicons": "^0.1.0",
-        "@libsql/client": "^0.1.4",
+        "@libsql/client": "^0.1.6",
+        "@types/d3": "^7.4.0",
         "@unocss/reset": "^0.51.12",
-        "@vercel/kv": "^0.1.2",
+        "@vercel/kv": "^0.2.0",
+        "chartjs-chart-geo": "^4.2.0",
         "chartjs-plugin-datalabels": "^2.2.0",
+        "d3": "^7.8.4",
+        "d3-geo": "^3.1.0",
         "drizzle-kit": "^0.17.6",
         "drizzle-orm": "^0.25.4",
+        "world-atlas": "^2.0.2",
         "zod": "^3.21.4"
     }
 }
